--- a/Paper/CMSC510_NICK_Report.tex
+++ b/Paper/CMSC510_NICK_Report.tex
@@ -376,7 +376,10 @@ Network-Induced Classification Kernels, NICK is a regularization equation. Prima
 
 % no keywords
 
-
+\input{sec_intro}
+\input{sec_methods}
+\input{sec_results}
+\input{sec_conclusion}
 
 
 % For peer review papers, you can put extra information on the cover
@@ -389,25 +392,6 @@ Network-Induced Classification Kernels, NICK is a regularization equation. Prima
 % creates the second title. It will be ignored for other modes.
 \IEEEpeerreviewmaketitle
 
-
-
-\section{Introduction}
-% no \IEEEPARstart
-This demo file is intended to serve as a ``starter file''
-for IEEE conference papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8b and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
- 
-\hfill November 14, 2017
-
-\subsection{Subsection Heading Here}
-Subsection text here.
-
-
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
 
 
 % An example of a floating figure using the graphicx package.
@@ -504,15 +488,6 @@ Subsubsection text here.
 % footnotes above bottom floats. This can be corrected via the
 % \fnbelowfloat command of the stfloats package.
 
-
-
-
-\section{Conclusion}
-The conclusion goes here.
-
-
-
-
 % conference papers do not normally have an appendix
 
 
@@ -548,14 +523,8 @@ The conclusion goes here.
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
-\begin{thebibliography}{1}
-
-\bibitem{Network-Induced Classification Kernels for Gene Expression Profile Analysis}
-\emph{Network-Induced Classification Kernels for Gene Expression Profile Analysis}
-%H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-%  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
-
-\end{thebibliography}
+\bibliographystyle{IEEEtran}
+\bibliography{NICK_Report}
 
 
 
