--- a/Paper/CMSC510_NICK_Report.tex
+++ b/Paper/CMSC510_NICK_Report.tex
@@ -159,7 +159,7 @@
 
 % *** MATH PACKAGES ***
 %
-%\usepackage{amsmath}
+\usepackage{amsmath}
 % A popular package from the American Mathematical Society that provides
 % many useful and powerful commands for dealing with mathematics.
 %
