--- a/Paper/CMSC510_NICK_Report.tex
+++ b/Paper/CMSC510_NICK_Report.tex
@@ -153,8 +153,8 @@
 % You can find documentation about the pdfTeX application at:
 % http://www.tug.org/applications/pdftex
 
-
-
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows,automata}
 
 
 % *** MATH PACKAGES ***
