Added Conclusion and Results as well as modified ...Report.tex to include Acknowledgments.

--- a/Paper/CMSC510_NICK_Report.tex
+++ b/Paper/CMSC510_NICK_Report.tex
@@ -492,10 +492,10 @@ Network-Induced Classification Kernels, NICK is a regularization equation. Prima
 
 
 % use section* for acknowledgment
-%\section*{Acknowledgment}
+\section*{Acknowledgment}
 
 
-%The authors would like to thank...
+The authors would like to thank Dr. Arodz for his guidance, NumPy for its extensive and strong matrix augmentation functions, and TensorFlow for its robust math programming library.
 
 
 
