--- a/Paper/sec_conclusion.tex
+++ b/Paper/sec_conclusion.tex
@@ -1,1 +1,3 @@
 \section{Conclusion}
+In conclusion, NICK which exploits prior knowledge of relationships between features does improve performance on a scale relative to the amount of knowledge about said relations. Structures and characteristics within a graph such as adjacency, cliques, clusters, disconnectedness, and contribution are instrumental to the learning of a classifier. When considering disconnectedness, features must not be isolated and have at least one relation to another feature. The performance of the regularization method is quadratic in time and quadratic in space. The adjacencies are required to be stored in a matrix of $n \times n$.\\
+Considering the implications of processing all the pertinent matrices, a preprocessing technique of necessary subgraphs based on the samples reduces the space and time demand. \\
