--- a/Paper/CMSC510_NICK_Report.tex
+++ b/Paper/CMSC510_NICK_Report.tex
@@ -495,7 +495,7 @@ Network-Induced Classification Kernels, NICK is a regularization equation. Prima
 \section*{Acknowledgment}
 
 
-The authors would like to thank Dr. Arodz for his guidance, NumPy for its extensive and strong matrix augmentation functions, and TensorFlow for its robust math programming library.
+The authors would like to thank Dr. Arodz for his guidance, the developers of NumPy for its extensive and strong matrix augmentation functions, and the developers of TensorFlow for its robust machine learning library.
 
 
 
