--- a/Paper/NICK_Report.bib
+++ b/Paper/NICK_Report.bib
@@ -14,3 +14,15 @@ pages={694-709},
 doi={10.1089/cmb.2012.0065},
 url={https://doi.org/10.1089/cmb.2012.0065}
 }
+
+@article{Jensen2009,
+author = {Jensen, Lars J. and Kuhn, Michael and Stark, Manuel and Chaffron, Samuel and Creevey, Chris and Muller, Jean and Doerks, Tobias and Julien, Philippe and Roth, Alexander and Simonovic, Milan and Bork, Peer and von Mering, Christian},
+title = {STRING 8—a global view on proteins and their functional interactions in 630 organisms},
+journal = {Nucleic Acids Research},
+volume = {37},
+number = {suppl1},
+pages = {D412-D416},
+year = {2009},
+doi = {10.1093/nar/gkn760},
+URL = {http://dx.doi.org/10.1093/nar/gkn760}
+}
