--- a/Paper/CMSC510_NICK_Report.tex
+++ b/Paper/CMSC510_NICK_Report.tex
@@ -371,7 +371,7 @@ Virginia Commonwealth University}}
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
-Network-Induced Classification Kernels, NICK is a regularization equation. Primarily, it utilizes relations within a graph to penalize weights of attributes that are distant from each other.
+Network-Induced Classification Kernels, NICK is a graph-based regularization method. It utilizes relations between features of a dataset expressed as an undirected graph to assign a penalty term to the standard SVM cost function. It does this based on the assumption that connected features within the graph should have similar weights in the final classifier.  In this paper, we present an examination of NICK, an examination of its performance on a sample network and dataset, and comparison to its cited performance in literature.  Based on our findings, we conclude that NICK does indeed provide a performance benefit, however it is highly dependent on the properties and complexity of the dataset and corresponding network in which it is employed.
 \end{abstract}
 
 % no keywords
