--- a/Paper/sec_conclusion.tex
+++ b/Paper/sec_conclusion.tex
@@ -1,3 +1,4 @@
 \section{Conclusion}
-In conclusion, NICK which exploits prior knowledge of relationships between features does improve performance on a scale relative to the amount of knowledge about said relations. Structures and characteristics within a graph such as adjacency, cliques, clusters, disconnectedness, and contribution are instrumental to the learning of a classifier. When considering disconnectedness, features must not be isolated and have at least one relation to another feature. The performance of the regularization method is quadratic in time and quadratic in space. The adjacencies are required to be stored in a matrix of $n \times n$.\\
-Considering the implications of processing all the pertinent matrices, a preprocessing technique of necessary subgraphs based on the samples reduces the space and time demand. \\
+In conclusion, NICK which exploits prior knowledge of relationships between features does improve performance on a scale relative to the amount of knowledge on said relations. It does appear to be effective to some extent based on our analysis. As observed by Lavi et al, structures and characteristics within a graph such as adjacency, cliques, clusters, disconnectedness, and contribution are instrumental to the effectiveness of this method. As we have seen, on a small graph of 10 nodes, this technique does improve performance, but only in small increments.  Given the performance gains achieved by Lavi et al, we conclude a larger, more complex network is necessary to fully leverage the benefits of this approach.  However, such a large network does not guarantee the effectiveness of this approach. On several datasets examined by Lavi et al, NICK performed worse than standard SVM with the determining factor being the number of nodes in the graph.  Further work is needed to examine the properties of networks and datasets which make them ideal candidates for NICK regularization and future research may be directed in this area.
+	
+In addition to the synthetic dataset we examined, and the gene datasets examined by Lavi et al, other real-world applications may exist for NICK. As the actual method is domain-agnostic, it may be applied to a wide variety of areas.  The only constraint on utilizing this approach is that there must exist relationships between features in the dataset which can be expressed as an undirected graph such that connected features within the graph should have similar influence on the classification decision in the final classifier.  Indeed, as illustrated by Lavi et al, the matrix representation of their approach has applications in in chemistry and electronic engineering.  
