--- a/Paper/sec_intro.tex
+++ b/Paper/sec_intro.tex
@@ -22,7 +22,7 @@ This kernel can be represented in the form of a matrix \textbf{Q}, derived from 
 
 The structure of the remainder of this paper is as follows:
 \begin{enumerate}
-	\item We present an overview of our examination of this method, the generation of our datasets and our evaluation procedure
+	\item We present an overview of our examination of this method, the generation of our dataset and our evaluation procedure
 	\item We present the results of our evaluation and compare them to the results presented by Lavi et al
 	\item We offer some conclusions regarding the performance of this method and speculations as to its usefulness
 \end{enumerate}
