--- a/Paper/sec_methods.tex
+++ b/Paper/sec_methods.tex
@@ -3,7 +3,7 @@
 To evaluate this method we opt to utilize synthetic datasets due to difficulties parsing the gene datasets.  This approach has the added benefit of evaluating the regularization method in a general purpose sense, rather than in a specific domain.  To begin we generated the network detailed in Figure \ref{fig:network1}.  
 
 \begin{figure}[h]
-	\caption{}
+	\caption{Evaluation Network}
 	\label{fig:network1}
 	\centering
 	\begin{tikzpicture}[auto, node distance=1.5cm]
