Fix author headers

--- a/Paper/CMSC510_NICK_Report.tex
+++ b/Paper/CMSC510_NICK_Report.tex
@@ -327,12 +327,15 @@
 % use a multiple column layout for up to three different
 % affiliations
 \author{\IEEEauthorblockN{Chase Greco}
-\IEEEauthorblockA{School of Engineering\\
-Virginia Commonwealth University}
+\IEEEauthorblockA{Virginia Commonwealth University \\
+Richmond, Virginia, USA \\
+grecocd@vcu.edu}
 \and
 \IEEEauthorblockN{Dmitriy Voronin}
-\IEEEauthorblockA{School of Engineering\\
-Virginia Commonwealth University}}
+\IEEEauthorblockA{Virginia Commonwealth University \\
+Richmond, Virginia, USA \\
+voroninda@vcu.edu}
+}
 
 % conference papers do not typically use \thanks and this command
 % is locked out in conference mode. If really needed, such as for
